@@ -1,7 +1,12 @@
 2010-01-08  Romain Francois <francoisromain@free.fr>
 
-	* src/Rcpp/Pairlist.h: Pairlist gains a push_back 
-	and insert methods
+	* src/Rcpp/wrap.h: added wrap( size_t ) to disambiguate it
+
+	* int/unitTests/runit.XPTr.R: forgot to set the finalizer on the
+	external pointer
+
+	* src/Rcpp/Pairlist.h: Pairlist gains a push_back, replace,
+	length, size and insert methods
 
 	* src/Rcpp/Language.h: idem for Language
 
